<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".GameActivity"
    tools:visibility="visible">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="199dp"
            android:layout_height="151dp"
            android:contentDescription="@string/ImageButton1"
            android:onClick="onClickLowerLeft"
            android:background="@android:color/holo_red_dark"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="218dp"
            android:layout_height="151dp"
            android:contentDescription="@string/ImageButton2"
            android:onClick="onClickLowerRight"
            android:background="@android:color/holo_red_dark"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="218dp"
            android:layout_height="157dp"
            android:contentDescription="@string/ImageButton4"
            android:onClick="onClickUpperLeft"
            android:background="@android:color/holo_red_dark"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="199dp"
            android:layout_height="157dp"
            android:contentDescription="@string/ImageButton3"
            android:onClick="onClickUpperRight"
            android:background="@android:color/holo_red_dark"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/randomResultText"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:text="@string/randomResultText"
            app:layout_column="1"
            app:layout_row="2" />

        <TextView
            android:id="@+id/correcttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arvasit_oikein"
            android:textAllCaps="true"
            android:textColor="#2ECD12"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/wrongtext"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:text="@string/arvasit_v_rin"
            android:textAllCaps="true"
            android:textColor="#E10035"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_row="3" />

        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:text="@string/pisteet_0"
            app:layout_column="1"
            app:layout_row="4" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>